--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -37,32 +37,37 @@
 }
 
 .other-items-grid {
-  @apply grid grid-cols-1 gap-3;
-
   @media only screen and (min-width: 960px) {
     @apply grid-cols-3;
   }
 
-  .item {
-    @apply flex flex-col bg-neutral-500 rounded-md overflow-hidden border-2 border-neutral-300 select-none;
-    box-shadow: 4px 4px 0 theme("colors.neutral.300");
+  @apply grid grid-cols-2 gap-3;
+  
+  @media only screen and (max-width: 700px) {
+    @apply grid-cols-1;
+  }
+  
+}
 
-    article {
-      @apply p-4 flex flex-col justify-center;
-    }
+.item {
+  @apply flex flex-col bg-neutral-500 rounded-md overflow-hidden border-2 border-neutral-300 select-none;
+  box-shadow: 4px 4px 0 theme("colors.neutral.300");
 
-    &:hover {
-      .img-wrapper img {
-        @apply scale-105;
-      }
-    }
+  article {
+    @apply p-4 flex flex-col justify-center;
   }
 
-  .img-wrapper {
-    @apply flex-shrink-0 relative h-[200px] w-full;
-
-    img {
-      @apply transition-all duration-300;
+  &:hover {
+    .img-wrapper img {
+      @apply scale-105;
     }
+  }
+}
+
+.img-wrapper {
+  @apply flex-shrink-0 relative h-[235px] w-full;
+
+  img {
+    @apply transition-all duration-[370ms];
   }
 }
